--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -14,14 +14,14 @@
   <!-- include source files here... -->
   <!--script src="src/Player.js"></script>
   <script src="src/Song.js"></script-->
-  <script src="../mixedlibs/bootstrap-fileinput/js/fileinput.js"></script>
+  <script src="../js/extended.js"></script>
   <script src="src/Test.js"></script>
   
 
   <!-- include spec files here... -->
   <!--script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script-->
-  <script src="spec/fileinputSpec.js"></script>
+  <script src="spec/extendedSpec.js"></script>
   <!--<script src="src/SpecTest.js"></script>-->
   
 
